--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -35,12 +35,12 @@
 }
 
 .reviewDiv {
-  text-align: left;
-  padding-left: 340px;
+  text-align: center;
+  
 }
 
 .reviewButton {
-  margin-left: 50px;
+  align: center;
 }
 
 .thankYouDiv {
